# -rbycomergent

./: .env.production.example  .envrc  .gitignore  AGENTS.md  COLOR_SYSTEM.md  Makefile  README.md  UI_SYSTEM.md  docker-compose.docs.yml  docker-compose.dokploy.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
chattersift/: conftest.py
chattersift/alerts/: apps.py  services.py
chattersift/alerts/tests/: test_services.py  test_views.py
chattersift/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
chattersift/core/: apps.py  extension_points.py  text_snippets.py
chattersift/reddit/: _fetcher.py  apps.py  clients.py  contracts.py  ingestion.py  matching.py  models.py  parsers.py  planning.py  scheduling.py  services.py  tasks.py
chattersift/reddit/migrations/: 0001_initial.py  0005_fetchrun.py
chattersift/reddit/tests/: test_clients.py  test_ingestion.py  test_ingestion_fixtures.py  test_matching.py  test_planning.py  test_tasks.py
chattersift/static/css/: project.css
chattersift/static/js/: project.js
chattersift/static/src/: project.css
chattersift/templates/: base.html  dash_base.html
chattersift/templates/alerts/: notification_settings.html
chattersift/templates/alerts/emails/: match_digest.html  match_digest.txt
chattersift/templates/allauth/elements/: alert.html  button.html  button_group.html  field.html  fields.html  form.html  h1.html  h2.html  hr.html  p.html
chattersift/templates/allauth/layouts/: entrance.html  manage.html
chattersift/templates/dash/: _settings_content.html  _settings_notifications.html  _settings_profile.html  _sidebar_nav.html  _user_menu.html  settings.html
chattersift/templates/pages/: home.html
chattersift/templates/tracking/: _dashboard_content.html  _dashboard_overview.html  _leads_content.html  _matches_content.html  _matches_feed_item.html  _monitor_form.html  _monitor_row.html  _monitor_section_keywords.html  _monitor_section_semantic.html  _overview_content.html  _runs_content.html  _subreddit_group.html  dashboard.html  leads.html  matches.html  overview.html  runs.html
chattersift/templates/users/: user_detail.html  user_form.html
chattersift/tracking/: admin.py  apps.py  forms.py  keyword_extraction.py  models.py  services.py  urls.py  views.py
chattersift/tracking/migrations/: 0001_initial.py  0004_alter_monitor_options_and_more.py  0007_match_contacted_at_match_lead_status.py
chattersift/tracking/templatetags/: tracking_extras.py
chattersift/tracking/tests/: test_forms.py  test_services.py  test_views.py
chattersift/users/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
chattersift/users/api/: schema.py  views.py
chattersift/users/migrations/: 0001_initial.py  0003_remove_user_name.py  0004_user_keyword_extraction_url.py
chattersift/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
chattersift/users/tests/api/: test_openapi.py  test_urls.py  test_views.py
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/caddy/: Caddyfile  Dockerfile
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: api.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  deployment.md  howto.rst  index.rst  make.bat  users.rst
locale/: README.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
tests/: test_deployment.py  test_urls.py
tests/fixtures/reddit/: README.md
tests/fixtures/reddit/raw/: comment_search_sitewide_django.json  (+23 more)
(+1 files in other folders)
