[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "chattersift"
version = "0.1.0"
description = "Keywords monitoring for Reddit."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Walden Cui", email = "contact@chattersift.com" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "celery==5.6.3",
  "collectfasta==3.3.3",
  "crispy-bootstrap5==2026.3",
  "django>=5.2.14,<5.3",
  "django-allauth[mfa]==65.16.1",
  "django-anymail[amazon-ses]==15.0",
  "django-celery-beat==2.9.0",
  "django-compressor==4.6.0",
  "django-cors-headers==4.9.0",
  "django-crispy-forms==2.6",
  "django-environ==0.13.0",
  "django-model-utils==5.0.0",
  "django-ninja==1.6.2",
  "django-redis==6.0.0",
  "django-storages[s3]==1.14.6",
  "django-widget-tweaks==1.5.1",
  "gunicorn==26.0.0",
  "hiredis==3.3.1",
  "httpx==0.28.1",
  "litellm==1.84.0",
  "lxml==6.1.0",
  "pillow==12.2.0",
  "psycopg[binary]==3.3.4",
  "python-slugify==8.0.4",
  "redis==7.4.0",
  "sentry-sdk==2.60.0",
  "uvicorn[standard]==0.47.0",
  "uvicorn-worker==0.4.0",
  "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
  "coverage==7.14.0",
  "django-browser-reload>=1.21.0",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==6.3.0",
  "django-extensions==4.1",
  "djlint==1.36.4",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "pre-commit==4.6.0",
  "psycopg[binary]==3.3.4",
  "pytest==9.0.3",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "ruff==0.15.13",
  "sphinx==9.1.0",
  "sphinx-autobuild==2025.8.25",
  "ty>=0.0.36",
  "types-lxml==2026.2.16",
  "watchfiles==1.1.1",
  "werkzeug[watchdog]==3.1.8",
]

[tool.hatch]
build.targets.wheel.packages = [
  "config",
  "chattersift",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
line-length = 120
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
lint.isort.force-single-line = true

[tool.pyproject-fmt]
keep_full_version = true

[tool.ty]
rules.invalid-return-type = "ignore"
rules.unresolved-attribute = "ignore"
src.exclude = [
  "**/migrations/**",
  "**/tests/**",
  "config/settings/**",
]

[tool.pytest]
# ==== pytest ====
ini_options.minversion = "6.0"
ini_options.addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
ini_options.python_files = [
  "tests.py",
  "test_*.py",
]

[tool.coverage]
# ==== Coverage ====
run.include = [ "chattersift/**" ]
run.omit = [ "*/migrations/*", "*/tests/*" ]
run.plugins = [ "django_coverage_plugin" ]

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"
css.indent_size = 2
js.indent_size = 2
